--- a/.mackup.cfg
+++ b/.mackup.cfg
@@ -4,7 +4,6 @@ path = Developer/
 directory = config
 
 [applications_to_sync]
-fish
 git
 mackup
 vscode
@@ -15,4 +14,6 @@ iterm2
 neovim
 terminal
 tmux
+fish
 vim
+dircolors
