--- a/.tmux.conf
+++ b/.tmux.conf
@@ -64,10 +64,10 @@ tmux_conf_new_session_prompt=false
 ###################################################################
 
 # Free the original `Ctrl-b` prefix keybinding.
-# unbind C-b
+unbind C-b
 
 # set prefix key to ctrl-a
-# set -g prefix C-a
+set -g prefix C-a
 
 # set -g default-terminal screen-256color
 set -g status-keys vi
@@ -357,9 +357,9 @@ set -g @plugin 'tmux-plugins/tmux-battery'
 set -g @plugin 'xamut/tmux-network-bandwidth'
 set -g @plugin 'xamut/tmux-weather'
 
-set -g @nova-nerdfonts true
-# set -g @nova-nerdfonts-left 
-# set -g @nova-nerdfonts-right 
+set -g @nova-nerdfonts false
+# set -g @nova-nerdfonts-left ﮋ
+# set -g @nova-nerdfonts-right ﮋ
 
 set -g @nova-segment-mode "#{?client_prefix,Ω,ω}"
 set -g @nova-segment-mode-colors "#50fa7b #282a36"
