--- a/.tmux.conf
+++ b/.tmux.conf
@@ -3,14 +3,14 @@
 ###################################################################
 
 # Workaround to allow acessing OSX pasteboard
-# set-option -g default-command "reattach-to-user-namespace -l fish"
-# if-shell "uname | grep -q Darwin" {
-#   bind-key -T copy-mode-vi 'y' send -X copy-pipe-and-cancel 'reattach-to-user-namespace pbcopy'
-#   bind-key -T copy-mode-vi Enter send -X copy-pipe-and-cancel 'reattach-to-user-namespace pbcopy'
-# } {
-#   bind-key -T copy-mode-vi 'y' send -X copy-pipe-and-cancel 'xclip -in -selection clipboard'
-#   bind-key -T copy-mode-vi Enter send -X copy-pipe-and-cancel 'xclip -in -selection clipboard'
-# }
+set-option -g default-command "reattach-to-user-namespace -l bash"
+if-shell "uname | grep -q Darwin" {
+  bind-key -T copy-mode-vi 'y' send -X copy-pipe-and-cancel 'reattach-to-user-namespace pbcopy'
+  bind-key -T copy-mode-vi Enter send -X copy-pipe-and-cancel 'reattach-to-user-namespace pbcopy'
+} {
+  bind-key -T copy-mode-vi 'y' send -X copy-pipe-and-cancel 'xclip -in -selection clipboard'
+  bind-key -T copy-mode-vi Enter send -X copy-pipe-and-cancel 'xclip -in -selection clipboard'
+}
 
 # Appropriate terminal colors
 set -g default-terminal "xterm-256color"
@@ -91,7 +91,7 @@ setw -g mode-keys vi
 unbind p
 bind p paste-buffer
 bind-key -T copy-mode-vi v send-keys -X begin-selection
-bind-key -T copy-mode-vi y send-keys -X copy-selection-and-cancel
+# bind-key -T copy-mode-vi y send-keys -X copy-selection-and-cancel
 
 # shift-movement keys will resize panes
 bind J resize-pane -D 5
