fix defautl key maps

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -116,6 +116,11 @@ bind m run "cut -c3- ~/.tmux.conf | sh -s _toggle_mouse"
 # edit configuration
 bind e new-window -n "~/.tmux.conf" "sh -c '\${EDITOR:-nvim} ~/.tmux.conf && tmux source ~/.tmux.conf && tmux display \"~/.tmux.conf sourced\"'"
 
+# disappered default keys
+# https://gist.github.com/zchee/37b4795f735ed78600c9
+# bind-key , command-prompt -I #W "rename-window '%%'"
+# bind-key . command-prompt "move-window -t '%%'"
+
 ###################################################################
 # Visual configs
 ###################################################################
@@ -352,10 +357,15 @@ set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'o0th/tmux-nova'
 set -g @plugin 'tmux-plugins/tmux-cpu'
-set -g @plugin 'spywhere/tmux-now-playing'
 set -g @plugin 'tmux-plugins/tmux-battery'
 set -g @plugin 'xamut/tmux-network-bandwidth'
 set -g @plugin 'xamut/tmux-weather'
+# set -g @plugin 'spywhere/tmux-now-playing'
+
+# set -g @now-playing-play-pause-key ''
+# set -g @now-playing-stop-key ''
+# set -g @now-playing-previous-key ''
+# set -g @now-playing-next-key ''
 
 set -g @nova-nerdfonts false
 # set -g @nova-nerdfonts-left ﮋ
